# versionflag

./: .gitignore  makefile  pyproject.toml  readme.md
versionflag/: __init__.py  __main__.py  init.ct  main.ct
